ebs_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-test-ebs
spec:
  containers:
  - name: app
    image: centos
    command: ["/bin/sh"]
    args: ["-c", "echo 'Storage is working!' > /data/test.txt && sleep 3600"]
    volumeMounts:
    - name: persistent-storage
      mountPath: /data
  volumes:
  - name: persistent-storage
    persistentVolumeClaim:
      claimName: ebs-claim
