kasten_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kasten-io
  name: kasten-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "my-shared-alb"
    alb.ingress.kubernetes.io/group.order: "10"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /k10/
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
